# quiescence-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
analysis/: utilities.py
analysis/backtests/: detailed_run_analysis.ipynb  pnl_curves.ipynb  pnl_curves_1min_60sec_comparison.ipynb  pnl_vs_duration.ipynb  time_of_day_returns.ipynb
analysis/interactive_brokers/: connection.ipynb  exploration.ipynb  polygon_ib_cataloger_comparison.ipynb
analysis/live_trading/momentum_strategy/: live_versus_backtest.ipynb
analysis/market_data/: minute_vs_second_bars_analysis.ipynb
scripts/: parse_ib_audit.py
